--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<div id="inner_scope">
 			<div id="course_nav">
 				<a class="nav_active">产品设计</a>
-				<a >编程语言</a>
+				<a>编程语言</a>
 			</div>
 			<div id="course">
 				<table>
@@ -124,7 +124,13 @@
 					<img src="img-2/inst.jpg">
 					<a></a>
 					<div id="shade_video">
-						<div id="vid"></div>				
+						<div id="vid">
+							<img src="img-2/vis_close.jpg" height="12" width="12" alt="">
+							<div class="video_contain">
+								<p>请观看详细信息</p>
+								<img src="img-2/inst-big.jpg" height="567" width="889" alt="">
+							</div>
+						</div>				
 					</div>
 				</div>
 				<div id="rank">
